--- a/projects/Javascript 101/index.html
+++ b/projects/Javascript 101/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p id="output"></p>
+    <button>YAMERO</button>
     <!-- <script src="assets/js/1-ifelse.js"></script> -->
-    <script src="assets/js/4-function.js"></script>
+    <script src="assets/js/5-array.js"></script>
 </body>
 </html>
