--- a/projects/ToDo/todo.html
+++ b/projects/ToDo/todo.html
@@ -7,14 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Oof</h1>
+    <h1>To do list</h1>
     <li>Type 'List' to view list</li>
-    <li>Type ''</li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <p id="output"></p>
-    <button>YAMERO</button>
+    <li>Type 'New' to add list item</li>
+    <li>Type 'Delete' removes list item</li>
+    <li>Type 'Quit' to quite quit the quacking sight</li>
+    <li>Type 'Ragequit' to quite quit the site</li>
+    <button id="button">YAMERO</button>
     <script src="assets/js/todo.js"></script>
 </body>
 </html>
