Made changes to toDo list.

--- a/projects/Javascript 101/index.html
+++ b/projects/Javascript 101/index.html
@@ -12,4 +12,4 @@
     <!-- <script src="assets/js/1-ifelse.js"></script> -->
     <script src="assets/js/5-array.js"></script>
 </body>
-</html>
+</html
