--- a/projects/ToDo/todo.html
+++ b/projects/ToDo/todo.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <h1>To do list</h1>
-    <li>Type 'List' to view list</li>
-    <li>Type 'New' to add list item</li>
-    <li>Type 'Delete' removes list item</li>
-    <li>Type 'Quit' to quite quit the quacking sight</li>
-    <li>Type 'Ragequit' to quite quit the site</li>
-    <button id="button">YAMERO</button>
+    <li>Type 'list' to view list</li>
+    <li>Type 'new' to add list item</li>
+    <li>Type 'delete' removes list item</li>
+    <li>Type 'quit' to quite quit the quacking sight</li>
+    <button id="button">Command</button>
     <script src="assets/js/todo.js"></script>
 </body>
 </html>
