Made a few objects

--- a/projects/Javascript 101/index.html
+++ b/projects/Javascript 101/index.html
@@ -10,6 +10,6 @@
     <p id="output"></p>
     <button>YAMERO</button>
     <!-- <script src="assets/js/1-ifelse.js"></script> -->
-    <script src="assets/js/5-array.js"></script>
+    <script src="assets/js/6-objects.js"></script>
 </body>
 </html
