Finished DOM 11 and started DOM 12

--- a/projects/Javascript 101/subpages/11-DOM-3-manipulate.html
+++ b/projects/Javascript 101/subpages/11-DOM-3-manipulate.html
@@ -22,6 +22,11 @@
         <p class="special">Goodbye</p>
         <p>Hi again</p>
         <p id="last">Goodbye again</p>
+        <p class="test">This is an <strong>awesome</strong> paragraph</p>
+
+        <a href="http://google.com" target="_blank">I am a link</a>
+        <br>
+        <img src="#" alt="The DOM">
 
         <script src="../assets/js/11-DOM-3-manipulate.js" type="text/javascript"></script>
     </body>
