--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <main>
         <section class="bord">
-            <a href="#" class="mat">1</a>
-            <a href="#" class="mat">2</a>
-            <a href="#" class="mat">3</a>
+            <a href="#" class="mat">Javascript 101</a>
+            <a href="#" class="mat">toDo</a>
+            <a href="#" class="mat">Scorekeeper</a>
             <a href="#" class="mat">4</a>
             <a href="#" class="mat">5</a>
             <a href="#" class="mat">6</a>
