Fixed alot of things.

--- a/projects/js-playground/index.html
+++ b/projects/js-playground/index.html
@@ -8,11 +8,12 @@
     <title>Javascript playground</title>
 </head>
 <body>
-    <script src="assets/js/js-playground.js"></script>
-    <img class="light                                                                                               " src="assets/images/Isak.png" alt="">
-    <main>
+    <section id="light">
+        <img class="twenty" src="assets/images/Isak.png" alt="">
+    </section>
+    <main class="dang">
         <section class="jave">
-            <img class="stepbro" src="assets/images/Isak.png" alt="">
+            <img id="stepbro" src="assets/images/Isak.png" alt="">
         </section>
         <section class="jave">2</section>
         <section class="jave">3</section>
@@ -20,5 +21,6 @@
         <section class="jave">5</section>
         <section class="jave">6</section>
     </main>
+    <script src="assets/js/js-playground.js"></script>
 </body>
 </html
