--- a/projects/js-playground/index.html
+++ b/projects/js-playground/index.html
@@ -15,7 +15,11 @@
         <section class="jave">
             <img id="stepbro" src="assets/images/Isak.png" alt="">
         </section>
-        <section class="jave">2</section>
+        <section class="jave">
+            <h1 id="gosh">1</h1>
+            <img id="slide" src="" alt="">
+            <h1 id="darnit">2</h1>
+        </section>
         <section class="jave">3</section>
         <section class="jave">4</section>
         <section class="jave">5</section>
