Made some fixes and started the third box

--- a/projects/js-playground/index.html
+++ b/projects/js-playground/index.html
@@ -15,16 +15,16 @@
         <section class="jave">
             <img id="stepbro" src="assets/images/Isak.png" alt="">
         </section>
-        <section class="jave">
+        <section class="jave dush">
             <h1 id="gosh">1</h1>
             <img id="slide" src="" alt="">
             <h1 id="darnit">2</h1>
         </section>
-        <section class="jave">3</section>
+        <section class="jave dash"><h1>Nightmode = N</h1><h1>Lightmode = L</h1><h1>Coolmode = C</h1><h1>Emanuelmode = E</h1></section>
         <section class="jave">4</section>
         <section class="jave">5</section>
         <section class="jave">6</section>
     </main>
     <script src="assets/js/js-playground.js"></script>
 </body>
-</html
+</html>
