fixed box 3 and started box 4

--- a/projects/js-playground/index.html
+++ b/projects/js-playground/index.html
@@ -12,18 +12,18 @@
         <img class="twenty" src="assets/images/Isak.png" alt="">
     </section>
     <main class="dang">
-        <section class="jave">
+        <section class="jave box1">
             <img id="stepbro" src="assets/images/Isak.png" alt="">
         </section>
-        <section class="jave dush">
+        <section class="jave box2">
             <h1 id="gosh">1</h1>
             <img id="slide" src="" alt="">
             <h1 id="darnit">2</h1>
         </section>
-        <section class="jave dash"><h1>Nightmode = N</h1><h1>Lightmode = L</h1><h1>Coolmode = C</h1><h1>Emanuelmode = E</h1></section>
-        <section class="jave">4</section>
-        <section class="jave">5</section>
-        <section class="jave">6</section>
+        <section class="jave box3"><h1>Nightmode = N</h1><h1>Bluemode = B</h1><h1>Coolmode = C</h1></section>
+        <section class="jave box4"><button>Click me Gayjin</button></section>
+        <section class="jave box5">5</section>
+        <section class="jave box6">6</section>
     </main>
     <script src="assets/js/js-playground.js"></script>
 </body>
