Finished alot. Almost done. Some adjustments to go

--- a/index.html
+++ b/index.html
@@ -8,19 +8,14 @@
 <body>
     <header>
         <h1 class="title">Smörgåsbord!</h1>
-        <h4 class="title">Ted Selegrans bjudning.</h4>
+        <h2 class="title">Ted Selegrans bjudning.</h2>
     </header>
     <main>
         <section class="bord">
-            <a href="#" class="mat">Javascript 101</a>
-            <a href="#" class="mat">toDo</a>
-            <a href="#" class="mat">Scorekeeper</a>
-            <a href="#" class="mat">4</a>
-            <a href="#" class="mat">5</a>
-            <a href="#" class="mat">6</a>
-            <a href="#" class="mat">7</a>
-            <a href="#" class="mat">8</a>
-            <a href="#" class="mat">9</a>
+            <a href="projects/Javascript 101/index.html" class="mat" target="_blank">Javascript 101</a>
+            <a href="projects/ToDo/todo.html" class="mat" target="_blank">toDo</a>
+            <a href="projects/Scorekeeper/index.html" class="mat" target="_blank">Scorekeeper</a>
+            <a href="projects/js-playground/index.html" class="mat" target="_blank">The playground</a>
         </section>
     </main>
 </body>
