I will now accept my fate. Playground has to be done now. Will continue later.

--- a/projects/ToDo/todo.html
+++ b/projects/ToDo/todo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>toDo</title>
+    <link rel="stylesheet" href="assets/css/toDo.css">
 </head>
 <body>
     <h1>To do list</h1>
