--- a/projects/js-playground/index.html
+++ b/projects/js-playground/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="light">
-        <img class="twenty" src="assets/images/hole.jpg" alt="">
+        <img src="assets/images/hole.jpg" alt="">
     </section>
     <main>
         <section class="jave box1">
@@ -25,19 +25,19 @@
             <h1>Nightmode = N</h1>
         </section>
         <section class="jave box4">
-            <h5 class="clickcount"></h5>
+            <h5></h5>
             <h3 class="win">You have won! Well played!</h3>
             <button class="click">Clicky</button>
         </section>
         <section class="jave box5">
             <video id="cyber" src="assets/videos/cyberpunk.mp4"></video>
-            <section id="controls1">
+            <section id="controls">
                 <button id="rewind">Back to start</button>
                 <button id="b">🡄 5 Seconds</button>
                 <button id="play">Play</button>
                 <button id="f">5 Seconds 🡆</button>
             </section>
-            <section id="controls2">
+            <section id="controls">
                 <button id="mute">Mute</button>
                 <button id="minus">Volume-</button>
                 <p id="percent"></p>
